--- a/dns_projet/web/index.html
+++ b/dns_projet/web/index.html
@@ -30,16 +30,13 @@
      <div class="container">
        <div class="row">
          <div class="col-xl-9 mx-auto">
-           <h1 class="mb-5">Vous voulez avoir une information sur un nom de domaine ? Entrez une!</h1>
+           <h1 class="mb-5">quelle domaine vous interesse?</h1>
          </div>
          <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
            <form>
              <div class="form-row">
-               <div class="col-12 col-md-5 mb-2 mb-md-0">
-                 <input type="text" class="form-control form-control-lg" placeholder="Entez le nom de domaine...">
-               </div>
-               <div class="col-12 col-md-4 mb-2 mb-md-0">
-                 <input onchange="ChangeDomaine(event)" type="text" class="form-control form-control-lg" placeholder="Entrez le domaine...">
+               <div class="col-12 col-md-9 mb-2 mb-md-0">
+                 <input type="text" class="form-control form-control-lg" placeholder="Entrez le nom de domaine...">
                </div>
                <div class="col-12 col-md-3">
                  <button type="submit" class="btn btn-block btn-lg btn-primary">Rechercher</button>
@@ -65,9 +62,9 @@
          </div>
          <div class="col-lg-6">
            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-2.jpg" alt="">
+             <img class="img-fluid rounded-circle mb-3" src="img/Olivier.jpeg" alt="">
              <h5>Olivier B.</h5>
-             <p class="font-weight-light mb-0">"A completé"</p>
+             <p class="font-weight-light mb-0">"l'ensemble du projet est enrichissant!"</p>
            </div>
          </div>
        </div>
