--- a/dns_projet/web/index.html
+++ b/dns_projet/web/index.html
@@ -36,10 +36,10 @@
            <form>
              <div class="form-row">
                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                 <input type="text" class="form-control form-control-lg" placeholder="Entrez le nom de domaine...">
+                 <input id="recherche" type="text" class="form-control form-control-lg" placeholder="Entrez le nom de domaine...">
                </div>
                <div class="col-12 col-md-3">
-                 <button type="submit" class="btn btn-block btn-lg btn-primary">Rechercher</button>
+                 <div onclick="domain_search('#recherche')"  class="btn btn-block btn-lg btn-primary">Rechercher</div>
                </div>
              </div>
            </form>
