--- a/dns_projet/web/index.html
+++ b/dns_projet/web/index.html
@@ -13,6 +13,7 @@
    <!-- Bootstrap core CSS -->
    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
    <script src="js/main.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
    <!-- Custom fonts for this template -->
    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
@@ -24,6 +25,7 @@
  </head>
 
  <body>
+     
    <!-- Masthead -->
    <header class="masthead text-white text-center">
      <div class="overlay"></div>
@@ -36,10 +38,10 @@
            <form>
              <div class="form-row">
                <div class="col-12 col-md-9 mb-2 mb-md-0">
-                 <input id="recherche" type="text" class="form-control form-control-lg" placeholder="Entrez le nom de domaine...">
+                 <input id="search" type="text" class="form-control form-control-lg" placeholder="Entrez le nom de domaine...">
                </div>
                <div class="col-12 col-md-3">
-                 <div onclick="domain_search('#recherche')"  class="btn btn-block btn-lg btn-primary">Rechercher</div>
+                 <div onclick="domain_search('#search')"  class="btn btn-block btn-lg btn-primary">Rechercher</div>
                </div>
              </div>
            </form>
