Recuperer les données du js a la console java

--- a/dns_projet/web/index.html
+++ b/dns_projet/web/index.html
@@ -41,7 +41,7 @@
                  <input id="search" type="text" class="form-control form-control-lg" placeholder="Entrez le nom de domaine...">
                </div>
                <div class="col-12 col-md-3">
-                 <div onclick="domain_search('#search')"  class="btn btn-block btn-lg btn-primary">Rechercher</div>
+                 <div onclick="domain_search()"  class="btn btn-block btn-lg btn-primary">Rechercher</div>
                </div>
              </div>
            </form>
