--- a/dns_projet/web/index.html
+++ b/dns_projet/web/index.html
@@ -1,102 +1,102 @@
 <!DOCTYPE html>
- <html lang="en">
+<html lang="en">
 
- <head>
+    <head>
 
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="description" content="">
-   <meta name="author" content="Roman Badanin et Olivier Baconnais">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="Roman Badanin et Olivier Baconnais">
 
-   <title>Projet DNS</title>
+        <title>Projet DNS</title>
 
-   <!-- Bootstrap core CSS -->
-   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-   <script src="js/main.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-   <!-- Custom fonts for this template -->
-   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
-   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+        <!-- Bootstrap core CSS -->
+        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <script src="js/main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+        <!-- Custom fonts for this template -->
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+        <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-   <!-- Custom styles for this template -->
-   <link href="css/landing-page.min.css" rel="stylesheet">
+        <!-- Custom styles for this template -->
+        <link href="css/landing-page.min.css" rel="stylesheet">
 
- </head>
+    </head>
 
- <body>
-     
-   <!-- Masthead -->
-   <header class="masthead text-white text-center">
-     <div class="overlay"></div>
-     <div class="container">
-       <div class="row">
-         <div class="col-xl-9 mx-auto">
-           <h1 class="mb-5">quelle domaine vous interesse?</h1>
-         </div>
-         <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-           <form>
-             <div class="form-row">
-               <div class="col-12 col-md-9 mb-2 mb-md-0">
-                 <input id="search" type="text" class="form-control form-control-lg" placeholder="Entrez le nom de domaine...">
-               </div>
-               <div class="col-12 col-md-3">
-                 <div onclick="domain_search()"  class="btn btn-block btn-lg btn-primary">Rechercher</div>
-               </div>
-             </div>
-           </form>
-         </div>
-       </div>
-     </div>
-   </header>
+    <body>
 
-   <!-- Testimonials -->
-   <section class="testimonials text-center bg-light">
-     <div class="container">
-       <h2 class="mb-5">Les développeurs qui ont travaillé pour vous...</h2>
-       <div class="row">
-         <div class="col-lg-6">
-           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-             <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
-             <h5>Roman B.</h5>
-             <p class="font-weight-light mb-0">"La partie js est intéressante en ce qui concerne le json"</p>
-           </div>
-         </div>
-         <div class="col-lg-6">
-           <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-             <img class="img-fluid rounded-circle mb-3" src="img/Olivier.jpeg" alt="">
-             <h5>Olivier B.</h5>
-             <p class="font-weight-light mb-0">"l'ensemble du projet est enrichissant!"</p>
-           </div>
-         </div>
-       </div>
-     </div>
-   </section>
+        <!-- Masthead -->
+        <header class="masthead text-white text-center">
+            <div class="overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-9 mx-auto">
+                        <h1 class="mb-5">Quelle domaine vous interesse?</h1>
+                    </div>
+                    <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
+                        <form>
+                            <div class="form-row">
+                                <div class="col-12 col-md-9 mb-2 mb-md-0">
+                                    <input id="search" type="text" class="form-control form-control-lg" placeholder="Entrez le nom de domaine...">
+                                </div>
+                                <div class="col-12 col-md-3">
+                                    <div onclick="domain_search()" class="btn btn-block btn-lg btn-primary">Rechercher</div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-   <!-- Footer -->
-   <footer class="footer bg-light">
-     <div class="container">
-       <div class="row">
-         <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
-           <ul class="list-inline mb-2">
-             <li class="list-inline-item">
-               <a onclick="About()" href="#">A Propos</a>
-             </li>
-             <li class="list-inline-item">&sdot;</li>
-             <li class="list-inline-item">
-               <a onclick="Contact()" href="#">Nous Contacter</a>
-             </li>
-           </ul>
-           <p class="text-muted small mb-4 mb-lg-0">&copy; Your DNS 2020. All Rights Reserved</p>
-         </div>
-       </div>
-     </div>
-   </footer>
+        <!-- Testimonials -->
+        <section class="testimonials text-center bg-light">
+            <div class="container">
+                <h2 class="mb-5">Les développeurs qui ont travaillé pour vous...</h2>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+                            <h5>Roman B.</h5>
+                            <p class="font-weight-light mb-0">"La partie js est intéressante en ce qui concerne le json"</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+                            <img class="img-fluid rounded-circle mb-3" src="img/Olivier.jpeg" alt="">
+                            <h5>Olivier B.</h5>
+                            <p class="font-weight-light mb-0">"l'ensemble du projet est enrichissant!"</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-   <!-- Bootstrap core JavaScript -->
-   <script src="vendor/jquery/jquery.min.js"></script>
-   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <!-- Footer -->
+        <footer class="footer bg-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+                        <ul class="list-inline mb-2">
+                            <li class="list-inline-item">
+                                <a onclick="About()" href="#">A Propos</a>
+                            </li>
+                            <li class="list-inline-item">&sdot;</li>
+                            <li class="list-inline-item">
+                                <a onclick="Contact()" href="#">Nous Contacter</a>
+                            </li>
+                        </ul>
+                        <p class="text-muted small mb-4 mb-lg-0">&copy; Your DNS 2020. All Rights Reserved</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
- </body>
+        <!-- Bootstrap core JavaScript -->
+        <script src="vendor/jquery/jquery.min.js"></script>
+        <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
- </html>
+    </body>
+
+</html>
