--- a/dns_projet/web/index.html
+++ b/dns_projet/web/index.html
@@ -45,6 +45,7 @@
                                 </div>
                             </div>
                         </form>
+                        <div id="response" class="col-md-10 col-lg-8 col-xl-7 mx-auto"></div>
                     </div>
                 </div>
             </div>
