--- a/dns_projet/web/index.html
+++ b/dns_projet/web/index.html
@@ -13,6 +13,10 @@
         <!-- Bootstrap core CSS -->
         <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <script src="js/main.js"></script>
+        
+        <script>
+            window.addEventListener('keydown',function(e){if(e.keyIdentifier === 'U+000A'||e.keyIdentifier === 'Enter'||e.keyCode === 13){if(e.target.nodeName === 'INPUT'&& e.target.type === 'text'){e.preventDefault();return false;}}},true);
+        </script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
         <!-- Custom fonts for this template -->
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -57,7 +61,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="img/testimonials-1.jpg" alt="">
+                            <img class="img-fluid rounded-circle mb-3" src="img/Roman.jpg" alt="">
                             <h5>Roman B.</h5>
                             <p class="font-weight-light mb-0">"La partie js est intéressante en ce qui concerne le json"</p>
                         </div>
